styling the home page

--- a/views/layout.html
+++ b/views/layout.html
@@ -12,6 +12,8 @@
     <style>
         body {
             font-family: Arial;
+            background-color: #94B370;
+            margin: 0;
         }
 
         /**
@@ -156,14 +158,40 @@
         }
 
         button {
-            width: 200px;
-            height: 40px;
-            background-color: #E84610;
-            border: 1px solid grey;
-            color: white;
-            text-transform: uppercase;
-            margin: 10px;
-            border-radius: 8px;
+            width: 150px;
+            height: 45px;
+            background-color: #8f70b3;
+            color: #fff;
+            font-size: 16px;
+            margin: 20px;
+            border-radius: 5px;
+            font-family: serif;
+            box-shadow: 1px 1px 1px 1px #FFF;
+            border: 1px solid #fff;
+        }
+
+
+        #title {
+            text-align: center;
+            color: #fff;
+            background-color: #8f70b3;
+            margin: 0;
+            padding: 15px;
+        }
+
+        #button-wrapper {
+            text-align: center;
+        }
+
+        #terminal-wrapper {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+        }
+
+        #terminal {
+            border: 30px solid black;
+            border-radius: 5px;
         }
     </style>
 </head>
