--- a/views/index.html
+++ b/views/index.html
@@ -1,15 +1,18 @@
 <body>
-    <button onclick="window.location.reload()">Run Program</button>
-    <div id="terminal"></div>
+    <h1 id="title">Task Tracker App</h1>
+    <div id="button-wrapper">
+        <button onclick="window.location.reload()">Restart App</button>
+    </div>
+    <div id="terminal-wrapper">
+        <div id="terminal"></div>
+    </div>
 
     <script>
         var term = new Terminal({
-            cols: 80,
-            rows: 24
+            cols: 90,
+            rows: 30
         });
         term.open(document.getElementById('terminal'));
-        term.writeln('Running startup command: python3 run.py');
-        term.writeln('');
 
         var ws = new WebSocket(location.protocol.replace('http', 'ws') + '//' + location.hostname + (location.port ? (
             ':' + location.port) : '') + '/');
@@ -24,4 +27,5 @@
         // Set focus in the terminal
         document.getElementsByClassName("xterm-helper-textarea")[0].focus();
     </script>
+
 </body>
